src/test/run-pass/trait-composition-trivial.rs
trait Foo {
    fn foo();
}

trait Bar : Foo {
    fn bar();
}

fn main() {}


